; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_backend.c_RB_Hyperspace.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_backend.c_RB_Hyperspace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@backEnd = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@GL_COLOR_BUFFER_BIT = common dso_local global i32 0, align 4
@qtrue = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @RB_Hyperspace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @RB_Hyperspace() #0 {
  %1 = alloca float, align 4
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @backEnd, i32 0, i32 0), align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %5

5:                                                ; preds = %4, %0
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @backEnd, i32 0, i32 1, i32 0), align 8
  %7 = and i32 %6, 255
  %8 = sitofp i32 %7 to float
  %9 = fdiv float %8, 2.550000e+02
  store float %9, float* %1, align 4
  %10 = load float, float* %1, align 4
  %11 = load float, float* %1, align 4
  %12 = load float, float* %1, align 4
  %13 = call i32 @qglClearColor(float %10, float %11, float %12, float 1.000000e+00)
  %14 = load i32, i32* @GL_COLOR_BUFFER_BIT, align 4
  %15 = call i32 @qglClear(i32 %14)
  %16 = call i32 @qglClearColor(float 0.000000e+00, float 0.000000e+00, float 0.000000e+00, float 1.000000e+00)
  %17 = load i64, i64* @qtrue, align 8
  store i64 %17, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @backEnd, i32 0, i32 0), align 8
  ret void
}

declare dso_local i32 @qglClearColor(float, float, float, float) #1

declare dso_local i32 @qglClear(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
